# mutaguard

./: .gitignore  README.md  cli.py  pyproject.toml
core/: equivalent.py  mutator.py  parallel.py  parser.py  results.py  runner.py
core/operators/: arithmetic.py  boolean.py  boundary.py  constant.py  relational.py  statement.py
reporting/: html.py  terminal.py
tests/: test_equivalent.py  test_integration.py  test_operators.py  test_parallel.py  test_results_and_terminal.py  test_runner.py
tests/dummies/: calculator.py  sorter.py  test_calculator.py  test_sorter_strong.py  test_sorter_weak.py
