[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mutaguard"
version = "0.1.0"
description = "A Python mutation testing engine"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
mutaguard = "mutaguard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
